Bug 973790 - only call ClearCurrentFrame() when closing down the camera hardware, r=dhylands