dom/camera/GonkCameraControl.cpp
@@ -215,11 +215,18 @@ nsGonkCameraControl::SetConfigurationImpl(const Configuration& aConfig)
   MOZ_ASSERT(NS_GetCurrentThread() == mCameraThread);
 
   // Stop any currently running preview
-  StopPreviewImpl();
+  nsresult rv = PausePreview();
+  if (NS_FAILED(rv)) {
+    // warn, but plow ahead
+    NS_WARNING("PausePreview() in SetConfigurationImpl() failed");
+  }
 
   DOM_CAMERA_LOGT("%s:%d\n", __func__, __LINE__);
-  nsresult rv = SetConfigurationInternal(aConfig);
-  NS_ENSURE_SUCCESS(rv, rv);
+  rv = SetConfigurationInternal(aConfig);
+  if (NS_WARN_IF(NS_FAILED(rv))) {
+    StopPreviewImpl();
+    return rv;
+  }
 
   // Restart the preview
   DOM_CAMERA_LOGT("%s:%d\n", __func__, __LINE__);
@@ -506,8 +513,19 @@ nsGonkCameraControl::StopPreviewImpl()
   DOM_CAMERA_LOGI("Stopping preview (this=%p)\n", this);
 
   mCameraHw->StopPreview();
-
   OnPreviewStateChange(CameraControlListener::kPreviewStopped);
+  return NS_OK;
+}
+
+nsresult
+nsGonkCameraControl::PausePreview()
+{
+  RETURN_IF_NO_CAMERA_HW();
+
+  DOM_CAMERA_LOGI("Pausing preview (this=%p)\n", this);
+
+  mCameraHw->StopPreview();
+  OnPreviewStateChange(CameraControlListener::kPreviewPaused);
   return NS_OK;
 }
 
