dom/camera/GonkCameraControl.h
@@ -116,6 +116,7 @@ protected:
   nsresult SetupRecording(int aFd, int aRotation, int64_t aMaxFileSizeBytes, int64_t aMaxVideoLengthMs);
   nsresult SetupVideoMode(const nsAString& aProfile);
   nsresult SetPreviewSize(const Size& aSize);
+  nsresult PausePreview();
 
   friend class SetPictureSize;
   friend class SetThumbnailSize;
